putImageData leaves visible artifacts on retina display https://bugs.webkit.org/show_bug.cgi?id=156039 <rdar://problem/25482243>

Reviewed by Simon Fraser.

Inflate the repaint rect to cover anti-aliasing bits.

Source/WebCore:

Test: fast/canvas/hidpi-repaint-on-retina-leaves-bits-behind.html

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::didDraw):

LayoutTests:

* fast/canvas/hidpi-repaint-on-retina-leaves-bits-behind-expected.html: Added.
* fast/canvas/hidpi-repaint-on-retina-leaves-bits-behind.html: Added.

Canonical link: https://commits.webkit.org/174244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198958 268f45cc-cd09-0410-ab3c-d52691b4dbfc